--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@ lesson-01/test/*
 lesson-02/dist/*
 lesson-02/node_modules/*
 lesson-02/test/*
-
+lesson-03/dist/*
+lesson-03/node_modules/*
+lesson-03/test/*
