--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ lesson-02/test/*
 lesson-03/dist/*
 lesson-03/node_modules/*
 lesson-03/test/*
+lesson-04/dist/*
+lesson-04/node_modules/*
+lesson-04/test/*
